# Handmade-Hero

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  build_msvc.bat  handmade.bat
code/: win32_handmade.cpp
